fix minimize css button spacing | #612

--- a/extension/css/cryptup.css
+++ b/extension/css/cryptup.css
@@ -343,7 +343,7 @@ table#compose th span.close_new_message { display: inline-block; position: absol
   font-weight: bold; opacity: .7; height: 15px; width: 15px; text-align: center; padding: 5px; }
 table#compose th span.close_new_message img { width: 15px; height: 15px; }
 table#compose th span.close_new_message:hover { cursor: pointer; opacity: 1; }
-table#compose th span.minimize_new_message { display: inline-block; position: absolute; right: 35px; margin-right: 5px; margin-top: 4px; color: white;
+table#compose th span.minimize_new_message { display: inline-block; position: absolute; right: 35px; margin-right: 1px; margin-top: 4px; color: white;
   font-weight: bold; opacity: .7; height: 15px; width: 15px; text-align: center; padding: 5px; }
 table#compose th span.minimize_new_message:hover { cursor: pointer; opacity: 1; }
 @media (max-height:36px) { table#compose tbody tr:not(:first-of-type) { display: none; } }
